--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -9,7 +9,10 @@ Group=__APP__
 
 WorkingDirectory=__INSTALL_DIR__/appgenerator
 Environment=FLASK_ENV=development
-ExecStart=__INSTALL_DIR__/venv/bin/flask -A app.py run
+ExecStart=__INSTALL_DIR__/venv/bin/gunicorn -c __INSTALL_DIR__/gunicorn.py app:app
+PIDFile=/run/gunicorn/appgenerator-pid
+ExecReload=/bin/kill -s HUP $MAINPID
+ExecStop=/bin/kill -s TERM $MAINPID
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
 Restart=on-failure
