--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,7 +9,7 @@ location __PATH__/static/ {
 }
 
 location @appgenerator {
-    proxy_pass http://unix:__INSTALL_DIR__/appgenerator/sock;
+    proxy_pass http://unix:__INSTALL_DIR__/sock;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
