Remove privileged syscall filter

--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -38,7 +38,7 @@ ProtectKernelModules=yes
 ProtectKernelTunables=yes
 LockPersonality=yes
 SystemCallArchitectures=native
-SystemCallFilter=~@clock @debug @module @mount @obsolete @reboot @setuid @swap @cpu-emulation @privileged
+SystemCallFilter=~@clock @debug @module @mount @obsolete @reboot @setuid @swap @cpu-emulation
 # @privileged # (not sure why this need to be removed...)
 
 # Denying access to capabilities that should not be relevant for webapps
